<resources>
    <string name="app_name">Memories</string>
    <string name="app_name_extended">Memories</string>
    <string name="hey_there">Namaste 🙏</string>
    <string name="welcome_to_bhojan">Welcome to\nMemories!</string>
    <string name="continue_with_google">  Continue with Google</string>
    <string name="share">Share</string>
    <string name="more">More</string>
    <string name="a_simple_banana">a simple banana</string>
    <string name="a_simple_lemonslice">a simple lemonslice</string>
    <string name="share_a_meal">Share-a-Meal 🍲</string>
    <string name="name_of_food">Enter Name of the Food Item</string>
    <string name="key_details">Some Key Ingredients Go Here…</string>
    <string name="suggestions">Any Suggestions for the Food?</string>
    <string name="share_food">Share Food</string>
    <string name="image_to_be_uploaded">Image to be uploaded</string>
    <string name="tips">Hmm…there is no internet right now, but food might be.\nDo share it if excess!</string>
    <string name="sign_out">Sign Out</string>
    <string-array name="greetings">
        <item>Hello</item>
        <item>नमस्ते</item>
        <item>Hola</item>
        <item>Olá</item>
        <item>こんにちは</item>
        <item>你好</item>
        <item>Salve</item>
        <item>హలో</item>
        <item>안녕하세요</item>
    </string-array>
    <string name="button_START">Begin</string>
    <string name="button_Guides">Guide</string>
    <string name="button_Credits">Credits</string>
    <string name="button_Quit">Back to Bhojan</string>
    <string name="developed_by">Developed by\nSpandan Saxena</string>
    <string name="developer_name">Ali Elganzory</string>
    <string name="linkedin">LinkedIn</string>
    <string name="linkedin_link">linkedin.com/in/AliElganzory</string>
    <string name="b_Call">Call</string>
    <string name="support">Support:</string>
    <string name="laptop">Laptop</string>
    <string name="bed">Bed</string>
    <string name="Menu_Title">fly FOOd</string>
    <string name="a_flying_food">Flying food</string>
    <string name="Start_Score">0</string>
    <string name="GO_replay">Again</string>
    <string name="GO_menu">Home</string>
    <string name="target_view">Target</string>
    <string name="High_Score">High-score:</string>
    <string name="menu_high_score">0</string>
    <string name="fullTime">90</string>
    <string name="TimerTitle">Time:</string>
    <string name="about_developers">About Developers</string>
    <string name="system">System</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="disclaimer_three">Lock, stock, and encrypted!\nYour visual treasures are safe and sound 🔑</string>
    <string name="to_continue_please_authenticate_using_pin">To continue, please authenticate using PIN or Biometrics</string>
    <string name="unlock">Unlock</string>
    <string name="use_biometrics">Use Biometrics</string>
    <string name="unlock_store">Unlock Memories</string>
</resources>