<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollViewHere"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/intro"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:fontFamily="@font/productsansbold"
                android:text="@string/app_name"
                android:textAlignment="center"
                android:textSize="24sp" />
            <ImageView
                android:id="@+id/foodImage"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="30dp"
                android:scaleType="centerCrop"
                android:contentDescription="@string/image_to_be_uploaded"
                android:src="@drawable/cloud_upload" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textAlignment="center"
                android:padding="20dp"
                android:text="@string/disclaimer_three"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/shareFood"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:elevation="30dp"
                android:fontFamily="@font/productsansbold"
                android:gravity="center"
                android:text="VAULT"
                app:rippleColor="@color/teal_700">
            </com.google.android.material.button.MaterialButton>

        </LinearLayout>
    </ScrollView>